fix: header navigation padding-right on tablet and desktop devices

--- a/shelter/css/main.css
+++ b/shelter/css/main.css
@@ -191,8 +191,13 @@ html {
   overflow: hidden;
   position: relative;
   height: 100%;
-  padding-right: 53px;
-  top: 4px;
+}
+
+@media (max-width: 767px) {
+  .hamburger {
+    padding-right: 53px;
+    top: 4px;
+  }
 }
 
 .hamburger__button {
