--- a/shelter/sass/layouts/_hamburger.sass
+++ b/shelter/sass/layouts/_hamburger.sass
@@ -2,8 +2,9 @@
     overflow: hidden
     position: relative
     height: 100%
-    padding-right: 53px
-    top: 4px
+    @include media-mobile
+        padding-right: 53px
+        top: 4px
 
 .hamburger__button
     display: none
